# server_old_0.17

./: .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog.md  How_To_Configure  README.md  appveyor.yml
contrib/Patcher/: make_patcher.bat
contrib/backporting/: update-commit-log.sh
contrib/extractor/: .gitignore  CMakeLists.txt  System.cpp  VC110_AD.sln  VC110_ad.vcxproj  VC120_AD.sln  VC120_ad.vcxproj  dbcfile.cpp  dbcfile.h
contrib/extractor/loadlib/: adt.cpp  adt.h  loadlib.cpp  loadlib.h  wdt.h
contrib/extractor_binary/: ExtractResources.sh  MoveMapGen.sh  README.txt
contrib/git_id/: git_id.cpp  git_id_vc120.sln
contrib/git_id/VC120/: git_id_vc120.vcxproj
contrib/mmap/: mmap_extract.py
contrib/mmap/src/: IntermediateValues.cpp  IntermediateValues.h  MMapCommon.h  MangosMap.h  MapBuilder.cpp  MapBuilder.h  TerrainBuilder.cpp  TerrainBuilder.h  VMapExtensions.cpp  generator.cpp
contrib/mysql_to_pgsql/src/: defines.h  main.cpp
contrib/vmap_assembler/: CMakeLists.txt  vmap_assembler.cpp
contrib/vmap_assembler/VC120/: vmap_assembler.vcxproj
contrib/vmap_extractor/: CMakeLists.txt
contrib/vmap_extractor/vmapextract/: CMakeLists.txt  adtfile.cpp  adtfile.h  dbcfile.cpp  dbcfile.h  gameobject_extract.cpp  model.cpp  model.h  modelheaders.h  mpqfile.cpp  mpqfile.h  vec3d.h  vmapexport.cpp  vmapexport.h  wdtfile.cpp  wdtfile.h  wmo.cpp  wmo.h
contrib/vmap_extractor/vmapextract/loadlib/: loadlib.h
contrib/vmap_extractor/win/: vmapExtractor_VC110.sln  vmapExtractor_VC120.sln
dep/: CMakeLists.txt
dep/ACE_wrappers/: CMakeLists.txt
dep/StormLib/: README.md  StormLib_vc120.vcxproj
dep/StormLib/src/: FileStream.cpp  SBaseCommon.cpp
doc/: EventAI.txt
sql/: README.md  characters.sql  mangos.sql  realmd.sql
sql/5.4.1/: 01_characters_pet_aura.sql  01_mangos_spell_proc_event.sql  02_characters_character_aura.sql
sql/updates/: 12331_01_mangos_spell_bonus_data.sql  12331_02_mangos_spell_chain.sql  12331_03_mangos_spell_learn_spell.sql  12331_04_mangos_spell_pet_auras.sql  12331_06_mangos_spell_threat.sql  12335_01_creature_template_spells-patch.sql  12338_01_mangos_mangos_string.sql  12340_01_mangos_mangos_string.sql  12378_02_mangos_gameobject_loot_template.sql  12378_05_mangos_skinning_loot_template.sql  12378_06_mangos_item_loot_template.sql  12378_09_mangos_spell_loot_template.sql  12378_10_mangos_prospecting_loot_template.sql  12388_01_mangos_creature_template.sql  12389_01_mangos_creature_template.sql  12447_01_characters_calendar_events.sql  12447_02_characters_calendar_invites.sql  12453_01_mangos_command.sql  12458_01_mangos_dbscripts_on_creature_death.sql  12484_01_mangos_string.sql  12484_01_realmd_account.sql  12564_01_mangos_spell_template.sql  12594_01_mangos_spell_template.sql  12602_01_mangos_npc_spellclick_spells.sql  12631_01_characters_corpse.sql  12631_01_mangos_creature.sql  12631_02_mangos_gameobject.sql  12654_01_mangos_command.sql  12662_01_mangos_hotfix_data.sql  12697_01_characters_characters.sql  12712_01_characters_characters.sql  12712_01_mangos.sql  12712_02_mangos_command.sql  12738_01_mangos_spell_template.sql  12741_01_mangos.sql  12751_01_mangos_phase.sql  12752_01_mangos_reputation_spillover_template.sql  12774_01_characters_characters.sql  12774_01_mangos.sql  12778_01_reputation_spillover_template.sql  (+10 more)
sql/updates/0.17/: 12310_01_creature_template_spells.sql  12331_05_mangos_spell_proc_event.sql  12361_01_mangos_mangos_string.sql  12365_01_mangos_instance_encounters.sql  12365_02_mangos_battleground_events.sql  12366_01_mangos_creature_model_info.sql  12377_01_mangos_dbscripts.sql  12378_01_mangos_creature_loot_template.sql  12378_03_mangos_fishing_loot_template.sql  12378_04_mangos_reference_loot_template.sql  12378_07_mangos_disenchant_loot_template.sql  12378_08_mangos_milling_loot_template.sql  12378_11_mangos_mail_loot_template.sql  12378_12_mangos_pickpocketing_loot_template.sql  12378_13_mangos_gossip_menu.sql  12378_14_mangos_gossip_menu_option.sql
src/bindings/: CMakeLists.txt
src/bindings/universal/: ScriptMgr.cpp  ScriptMgr.h  config.h  system.cpp
src/framework/: CMakeLists.txt
src/framework/Dynamic/: FactoryHolder.h  ObjectRegistry.h
src/framework/GameSystem/: Grid.h  GridLoader.h  GridRefManager.h  GridReference.h  NGrid.h  TypeContainer.h  TypeContainerFunctions.h  TypeContainerVisitor.h
src/framework/Platform/: CompilerDefs.h  Define.h
src/framework/Policies/: CreationPolicy.h  ObjectLifeTime.cpp  ObjectLifeTime.h  Singleton.h  (+1 more)
src/game/: AccountMgr.cpp  AccountMgr.h  AchievementMgr.cpp  AchievementMgr.h  AggressorAI.cpp  AggressorAI.h  ArenaTeam.cpp  ArenaTeam.h  ArenaTeamHandler.cpp  AuctionHouseHandler.cpp  AuctionHouseMgr.cpp  AuctionHouseMgr.h  Bag.cpp  Bag.h  CMakeLists.txt  Calendar.cpp  Calendar.h  CalendarHandler.cpp  Camera.cpp  Camera.h  Cell.h  CellImpl.h  Channel.cpp  Channel.h  ChannelHandler.cpp  ChannelMgr.cpp  ChannelMgr.h  CharacterDatabaseCleaner.cpp  CharacterHandler.cpp  Chat.cpp  Chat.h  ChatHandler.cpp  CombatHandler.cpp  ConfusedMovementGenerator.cpp  ConfusedMovementGenerator.h  Corpse.cpp  Corpse.h  Creature.cpp  Creature.h  CreatureAI.cpp  (+209 more)
src/mangosd/: CliRunnable.cpp  CliRunnable.h  MaNGOSsoap.cpp  MaNGOSsoap.h  Main.cpp  Master.cpp  Master.h  RASocket.cpp  RASocket.h  WorldRunnable.cpp  WorldRunnable.h  mangosd.conf.dist.in  mangosd.rc
src/realmd/: AuthSocket.cpp  Main.cpp  RealmList.cpp  RealmList.h
src/shared/: ByteBuffer.cpp  ByteBuffer.h  CMakeLists.txt  Common.cpp  Common.h  Errors.h  LockedQueue.h  Log.cpp  Log.h  PosixDaemon.cpp  PosixDaemon.h  ProgressBar.cpp  ProgressBar.h  ServiceWin32.cpp  ServiceWin32.h  SystemConfig.h.in  Threading.cpp  Threading.h  Timer.h  Util.cpp  Util.h  WorldPacket.h  revision.h  revision_nr.h  revision_sql.h
src/tools/: CMakeLists.txt
win/: mangosdVC120.sln
win/VC100/: game.vcxproj  game.vcxproj.filters
win/VC110/: g3dlite.vcxproj  game.vcxproj  game.vcxproj.filters  mangosd.vcxproj  realmd.vcxproj  shared.vcxproj
win/VC120/: game.vcxproj  mangosd.vcxproj  shared.vcxproj
win/VC90/: game.vcproj
(+242 files in other folders)
